--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,4 +4,4 @@ repos:
     hooks:
       - id: black
         language_version: python3
-        args: [".", "--config", "pyproject.toml"]
+        args: ["--config", "pyproject.toml"]
